--- a/package.json
+++ b/package.json
@@ -37,7 +37,11 @@
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
-      "last 1 safari version"
+      "last 1 safari version",
+      "ie >= 9"
     ]
+  },
+  "devDependencies": {
+    "react-app-polyfill": "^3.0.0"
   }
 }
